<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ims_background"
    tools:context=".presentation.edit_dialog_inventory_row">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="500dp"
        android:layout_height="587dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        app:rowCount="6">

    <TextView
        android:id="@+id/itemNameLabel"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_column="0"
        app:layout_row="0" />

    <TextView
        android:id="@+id/itemPriceLabel"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/item_price"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_column="0"
        app:layout_row="1" />

    <TextView
        android:id="@+id/itemCategoryLabel"
        android:layout_width="250dp"
        android:layout_height="77dp"
        android:text="@string/item_category"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_column="0"
        app:layout_row="4" />

    <EditText
        android:id="@+id/itemNameInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placeholderName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_column="1"
        app:layout_row="0" />

    <EditText
        android:id="@+id/itemPriceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/placeholderPrice"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_column="1"
        app:layout_row="1" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="211dp"
        android:layout_height="38dp"
        android:spinnerMode="dropdown"
        app:layout_column="1"
        app:layout_row="4" />

    <TextView
        android:id="@+id/itemDollarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_dollar_sign"
        android:textSize="20sp"
        app:layout_column="1"
        app:layout_row="1" />


    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>
